source/blender/depsgraph/intern/builder/deg_builder_relations_rig.cc
@@ -374,7 +374,7 @@ void DepsgraphRelationBuilder::build_rig(Object *object)
      *       to done, with transitive reduction removing this one. */
     add_relation(bone_ready_key, bone_done_key, "Ready -> Done");
     /* B-Bone shape is the real final step after Done if present. */
-    if (pchan->bone != NULL && pchan->bone->segments > 1) {
+    if (check_pchan_has_bbone(object, pchan)) {
       OperationKey bone_segments_key(
           &object->id, NodeType::BONE, pchan->name, OperationCode::BONE_SEGMENTS);
       /* B-Bone shape depends on the final position of the bone. */
@@ -434,7 +434,7 @@ void DepsgraphRelationBuilder::build_proxy_rig(Object *object)
     add_relation(bone_done_key, pose_cleanup_key, "Bone Done -> Pose Cleanup");
     add_relation(bone_done_key, pose_done_key, "Bone Done -> Pose Done", RELATION_FLAG_GODMODE);
     /* Make sure bone in the proxy is not done before it's FROM is done. */
-    if (pchan->bone && pchan->bone->segments > 1) {
+    if (check_pchan_has_bbone(object, pchan)) {
       OperationKey from_bone_segments_key(
           &proxy_from->id, NodeType::BONE, pchan->name, OperationCode::BONE_SEGMENTS);
       add_relation(from_bone_segments_key,
